--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -399,3 +400,4 @@ ReactDOM.render(React.createElement(SocialSpot), document.getElementById('root')
 </script>
 </body>
 </html>
+```
