--- a/index.html
+++ b/index.html
@@ -7,30 +7,25 @@
     <meta name="keywords" content="eventi, social, meetup, comunità, supabase">
     <title>SocialSpot</title>
 
-    <!-- Colori del tema per PWA -->
     <meta name="theme-color" content="#2563eb">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="SocialSpot">
 
-    <!-- Favicon SVG inline: logo con iniziali SS -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23f97316'/%3E%3Ctext x='50' y='60' font-family='Arial' font-size='40' font-weight='bold' text-anchor='middle' fill='white'%3ESS%3C/text%3E%3C/svg%3E">
 
-    <!-- Librerie via CDN -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
-    <!-- Google Maps per autocomplete (sostituire YOUR_GOOGLE_MAPS_KEY con la propria chiave) -->
+    <!-- 🔹 QUI devi sostituire YOUR_GOOGLE_MAPS_KEY con la tua chiave -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_KEY&libraries=places"></script>
 
-    <!-- Stili -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="root">
-        <!-- Schermata di caricamento iniziale -->
         <div id="initial-loader" class="loader-screen">
             <div class="loader-content">
                 <div class="app-logo">
@@ -43,11 +38,9 @@
         </div>
     </div>
 
-    <!-- Componenti e logica dell'applicazione -->
     <script type="text/babel" src="components.js"></script>
     <script type="text/babel" src="app.js"></script>
 
-    <!-- Registrazione service worker -->
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('sw.js')
