--- a/index.html
+++ b/index.html
@@ -12,35 +12,52 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="SocialSpot">
 
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23f97316'/%3E%3Ctext x='50' y='60' font-family='Arial' font-size='40' font-weight='bold' text-anchor='middle' fill='white'%3ESS%3C/text%3E%3C/svg%3E">
+    <!-- Favicon SVG con logo SS -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%232563eb;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23f97316;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='100' height='100' rx='20' fill='url(%23grad)'/%3E%3Ctext x='50' y='65' font-family='Arial, sans-serif' font-size='32' font-weight='bold' text-anchor='middle' fill='white'%3ESS%3C/text%3E%3C/svg%3E">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Font Awesome per icone -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- React e Supabase -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
-    <!-- 🔹 QUI devi sostituire YOUR_GOOGLE_MAPS_KEY con la tua chiave -->
+    <!-- Google Maps API -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_KEY&libraries=places"></script>
 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="root">
+        <!-- Loader migliorato -->
         <div id="initial-loader" class="loader-screen">
             <div class="loader-content">
                 <div class="app-logo">
-                    <div class="logo-icon">SS</div>
-                    <h1 class="logo-text">SocialSpot</h1>
+                    <div class="logo-icon">
+                        <span class="logo-text">SS</span>
+                    </div>
+                    <h1 class="brand-name">SocialSpot</h1>
                 </div>
                 <div class="loader-spinner"></div>
-                <p class="loader-text">Caricamento...</p>
+                <p class="loader-message">Caricamento in corso...</p>
             </div>
         </div>
     </div>
 
+    <!-- Pattern decorativo per sfondo -->
+    <div class="bg-pattern"></div>
+
     <script type="text/babel" src="components.js"></script>
     <script type="text/babel" src="app.js"></script>
 
+    <!-- Service Worker -->
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('sw.js')
