--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <meta name="keywords" content="eventi, social, meetup, comunità, supabase">
     <title>SocialSpot</title>
 
+    <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#2563eb">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="SocialSpot">
+
+    <!-- Manifest PWA -->
+    <link rel="manifest" href="/manifest.json">
 
     <!-- Favicon SVG con logo SS -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%232563eb;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23f97316;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='100' height='100' rx='20' fill='url(%23grad)'/%3E%3Ctext x='50' y='65' font-family='Arial, sans-serif' font-size='32' font-weight='bold' text-anchor='middle' fill='white'%3ESS%3C/text%3E%3C/svg%3E">
@@ -18,10 +22,10 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
     <!-- Font Awesome per icone -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- React e Supabase -->
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
@@ -29,31 +33,47 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
-    <!-- Google Maps API -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_KEY&libraries=places"></script>
+    <!-- Additional Libraries -->
+    <script src="https://unpkg.com/framer-motion@10/dist/framer-motion.js"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Performance optimizations -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+    <link rel="preload" href="styles.css" as="style">
 </head>
 <body>
     <div id="root">
-        <!-- Loader migliorato -->
+        <!-- Enhanced Loader -->
         <div id="initial-loader" class="loader-screen">
             <div class="loader-content">
-                <div class="app-logo">
-                    <div class="logo-icon">
-                        <span class="logo-text">SS</span>
+                <div class="app-logo-loading">
+                    <div class="logo-icon-loading">
+                        <span class="logo-text-loading">SS</span>
+                        <div class="loading-rings">
+                            <div class="ring ring-1"></div>
+                            <div class="ring ring-2"></div>
+                            <div class="ring ring-3"></div>
+                        </div>
                     </div>
-                    <h1 class="brand-name">SocialSpot</h1>
+                    <h1 class="brand-name-loading">SocialSpot</h1>
+                    <p class="brand-tagline">Connetti • Scopri • Partecipa</p>
                 </div>
-                <div class="loader-spinner"></div>
-                <p class="loader-message">Caricamento in corso...</p>
+                <div class="loading-progress">
+                    <div class="progress-bar-loading"></div>
+                    <p class="loading-text">Caricamento in corso...</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <!-- Pattern decorativo per sfondo -->
+    <!-- Background patterns -->
     <div class="bg-pattern"></div>
+    <div class="bg-gradient"></div>
 
+    <!-- Scripts -->
     <script type="text/babel" src="components.js"></script>
     <script type="text/babel" src="app.js"></script>
 
@@ -64,6 +84,83 @@
                 .then(reg => console.log('Service Worker registrato', reg))
                 .catch(err => console.error('Errore Service Worker', err));
         }
+
+        // PWA Install prompt
+        let deferredPrompt;
+        window.addEventListener('beforeinstallprompt', (e) => {
+            e.preventDefault();
+            deferredPrompt = e;
+            // Show install button
+            const installBtn = document.querySelector('.install-app-btn');
+            if (installBtn) {
+                installBtn.style.display = 'block';
+            }
+        });
+
+        // Performance monitoring
+        window.addEventListener('load', () => {
+            if ('performance' in window) {
+                setTimeout(() => {
+                    const perfData = performance.getEntriesByType('navigation')[0];
+                    console.log('Page load time:', perfData.loadEventEnd - perfData.loadEventStart, 'ms');
+                }, 0);
+            }
+        });
     </script>
+
+    <!-- Critical CSS inlined for performance -->
+    <style>
+        /* Critical loading styles */
+        .loader-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: linear-gradient(135deg, #2563eb 0%, #f97316 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            overflow: hidden;
+        }
+
+        .loading-rings {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .ring {
+            position: absolute;
+            border: 3px solid rgba(255,255,255,0.3);
+            border-radius: 50%;
+            animation: pulse-ring 2s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite;
+        }
+
+        .ring-1 { width: 60px; height: 60px; margin: -30px 0 0 -30px; animation-delay: 0s; }
+        .ring-2 { width: 80px; height: 80px; margin: -40px 0 0 -40px; animation-delay: 0.3s; }
+        .ring-3 { width: 100px; height: 100px; margin: -50px 0 0 -50px; animation-delay: 0.6s; }
+
+        @keyframes pulse-ring {
+            0% { transform: scale(0.33); opacity: 1; }
+            80%, 100% { transform: scale(1); opacity: 0; }
+        }
+
+        .progress-bar-loading {
+            width: 0;
+            height: 4px;
+            background: rgba(255,255,255,0.8);
+            border-radius: 2px;
+            animation: load-progress 3s ease-in-out infinite;
+        }
+
+        @keyframes load-progress {
+            0% { width: 0%; }
+            50% { width: 70%; }
+            100% { width: 100%; }
+        }
+    </style>
 </body>
 </html>
