--- a/index.html
+++ b/index.html
@@ -4,30 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SocialSpot</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <meta name="description" content="SocialSpot - Connetti, Scopri, Partecipa">
-    <meta name="keywords" content="social, eventi, networking, community">
-    <meta name="theme-color" content="#2563eb">
-    <link rel="manifest" href="/manifest.json">
-</head>
-<body>
-    <!-- Background patterns -->
-    <div class="bg-pattern"></div>
-    <div class="bg-gradient"></div>
-    
-    <!-- App container -->
-    <div id="root"></div>
-
-    <!-- React scripts -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone@7/babel.min.js"></script>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    
-    <!-- Main app scripts -->
-    <script src="components.js"></script>
-    <script src="app.js"></script>
+</head>
+<body>
+    <div id="root"></div>
+    <script type="text/babel" src="components.js"></script>
+    <script type="text/babel" src="app.js"></script>
 </body>
 </html>
